--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=sql-relations
 spring.datasource.url=jdbc:postgresql://localhost:5432/sql-relations
 spring.datasource.username = postgres
-spring.datasource.password = 1327
+spring.datasource.password = *******
